--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,11 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-
-      {% if page.url == "/about.html" or page.url == "/about/" %}
-        <a href="{{ '/' | relative_url }}" class="btn">Home</a>
-      {% else %}
+      
+      {% if page.url == "/" %}
         <a href="{{ '/about' | relative_url }}" class="btn">About Me</a>
+      {% else %}
+        <a href="{{ '/' | relative_url }}" class="btn">Home</a>
       {% endif %}
 
       {% if site.show_downloads %}
