--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,19 @@
 ---
 layout: default
 ---
-<small>{{ page.date | date: "%d/%m/%Y" }}</small>
-<h1>{{ page.post_title }}</h1>
+<article class="post-container">
+  <header class="post-meta-header">
+    <div class="post-date">
+      {{ page.date | date: "%-d %B %Y" }}
+    </div>
+    <h1 class="post-title-display">{{ page.title }}</h1>
+  </header>
 
-<div class="post-content">
-  {{ content }}
-</div>
+  <div class="post-content">
+    {{ content }}
+  </div>
 
-<hr>
-<a href="{{ site.baseurl }}/">← Back to home</a>
+  <footer class="post-footer">
+    <a href="{{ site.baseurl }}/" class="back-link">← Back to posts</a>
+  </footer>
+</article>
