--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,12 +7,12 @@
 
 // Light Theme Colors
 body.light-theme {
-  --bg-color: #ffffff;
+  --bg-color: #fdfaf6; 
   --main-text: #333333;
   --heading-color: #1a1a2e;
-  --border-color: #eeeeee;
+  --border-color: #e8e4de; /* Leggermente scurito per abbinarsi al panna */
   --excerpt-text: #666666;
-  --code-bg: #fdfdfd;
+  --code-bg: #f5f2ed;     /* Sfondo codice coordinato */
   --code-text: #24292e;
   --code-border: #e1e4e8;
   --code-accent: #e94560;
