fix: applied off-white also to home and about

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     {% include head.html %}
   </head>
-  <body>
+  <body class="light-theme">
     {% if page.layout == "post" %}
       <div id="reading-progress-container">
         <div id="reading-progress-bar"></div>
