--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,12 @@ layout: default
       {{ page.date | date: "%-d %B %Y" }}
     </div>
     <h1 class="post-title-display">{{ page.title }}</h1>
+
+    {% if page.description %}
+      <p class="post-subtitle-description">
+        {{ page.description }}
+      </p>
+    {% endif %}
   </header>
 
   <div class="post-content">
